--- a/index.html
+++ b/index.html
@@ -490,21 +490,21 @@ font-family: 'Gambarino', serif;" class="overflow-x-hidden bg-[#012034] text-gra
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
                         <img src="ruvankapoor.jpeg" class="shadow-lg">
                     </div>
-                    <h2 class="text-2xl font-bold mb-2 mt-5">Ruvan</h2>
+                    <h2 class="text-2xl font-bold mb-2 mt-5">Ruvan Kapoor</h2>
                     <p class="text-gray-600 text-left">Bizeco Stock Exchange</p>
                 </div>
             </div>
             <div class="grid md:grid-cols-3 gap-10" style="font-family: 'Switzer', sans-serif;">
                 <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
-                        <img src="aryanwalia_investor's.jpeg" class="shadow-lg">
+                        <img src="aryanwalia_investor_s.jpeg" class="shadow-lg">
                     </div>
                     <h2 class="text-2xl font-bold mb-2 mt-5">Aryan Walia</h2>
                     <p class="text-gray-600 text-left">Investor's Pitch</p>
                 </div>
                 <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
-                        <img src="arundhatijain_investor's.jpeg" class="shadow-lg">
+                        <img src="arundhatijain_estate.jpeg" class="shadow-lg">
                     </div>
                     <h2 class="text-2xl font-bold mb-2 mt-5">Arundhati Jain</h2>
                     <p class="text-gray-600 text-left">Investor's Pitch</p>
