--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ font-family: 'Gambarino', serif;" class="overflow-x-hidden bg-[#012034] text-gra
                 </div>
                 <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
-                        <img src="arundhatijain_estate.jpeg" class="shadow-lg">
+                        <img src="arundhatijain_investor_s.jpeg" class="shadow-lg">
                     </div>
                     <h2 class="text-2xl font-bold mb-2 mt-5">Arundhati Jain</h2>
                     <p class="text-gray-600 text-left">Investor's Pitch</p>
