--- a/index.html
+++ b/index.html
@@ -454,6 +454,28 @@ font-family: 'Gambarino', serif;" class="overflow-x-hidden bg-[#012034] text-gra
 
                 <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
+                        <img src="arjansingh_bse.jpeg" class="shadow-lg">
+                    </div>
+                    <h2 class="text-2xl font-bold mb-2 mt-5">Arjan Singh Bhasin</h2>
+                    <p class="text-gray-600 text-left">Management Head</p>
+                </div>
+                <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
+                    <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
+                        <img src="Keshav.jpeg" class="shadow-lg">
+                    </div>
+                    <h2 class="text-2xl font-bold mb-2 mt-5">Keshav Goel</h2>
+                    <p class="text-gray-600 text-left">Design Head</p>
+                </div>
+                <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
+                    <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
+                        <img src="Arshia.jpeg" class="shadow-lg">
+                    </div>
+                </div>
+                <h2 class="text-2xl font-bold mb-2 mt-5">Arshia Chugh</h2>
+                <p class="text-gray-600 text-left">Logistics Head</p>
+
+                <div class="bg-gray-900 rounded-lg p-8 flex flex-col items-center justify-center mb-5">
+                    <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
                         <img src="Aradhya.jpeg" class="shadow-lg">
                     </div>
                     <h2 class="text-2xl font-bold mb-2 mt-5">Aradhya Aggarwal</h2>
