--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ font-family: 'Gambarino', serif;" class="overflow-x-hidden bg-[#012034] text-gra
                     <div class="bg-gray-200 h-20 overflow-hidden w-20 p-2 rounded-full" data-aos="flip-left">
                         <img src="Arshia.jpeg" class="shadow-lg">
                     </div>
-                    <h2 class="text-2xl font-bold mb-2 mt-5">Arshia Chugh</h2>
+                    <h2 class="text-2xl font-bold mb-2 mt-5">Arshia Chaudhary</h2>
                     <p class="text-gray-600 text-left">Logistics Head</p>
                 </div>
 
